全面改造dio, 使用basedao, basedio