@@ -1,5 +1,10 @@
 package chengweiou.universe.carina.service.room;
 
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
 import chengweiou.universe.blackhole.exception.FailException;
 import chengweiou.universe.blackhole.exception.ProjException;
 import chengweiou.universe.blackhole.model.Builder;
@@ -13,11 +18,6 @@ import chengweiou.universe.carina.model.entity.room.RoomType;
 import chengweiou.universe.carina.service.history.HistoryDio;
 import chengweiou.universe.carina.service.person.PersonDio;
 import chengweiou.universe.carina.service.person.PersonTask;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RoomService {
@@ -36,51 +36,21 @@ public class RoomService {
     @Autowired
     private ProjConfig config;
 
-    public void save(Room e) throws FailException, ProjException {
-        dio.save(e);
-    }
-
-    public void delete(Room e) throws FailException {
-        dio.delete(e);
-    }
-
-    public long update(Room e) {
-        return dio.update(e);
-    }
-
-    public Room findById(Room e) {
-        return dio.findById(e);
-    }
-
     /**
      * 同 findById， 不创建新房间
      * @param e
      * @return
      */
     public Room findByKey(Room e) {
-        e.setPersonIdList(e.getPersonIdList().stream().distinct().sorted().collect(Collectors.toList()));
+        e.setPersonIdList(e.getPersonIdList().stream().distinct().sorted().toList());
         e.setType(e.getPersonIdList().size()==2 ? RoomType.SOLO : RoomType.GROUP);
         return dio.findByKey(e);
-    }
-
-    public long count(SearchCondition searchCondition) {
-        return dio.count(searchCondition, null);
-    }
-    public List<Room> find(SearchCondition searchCondition) {
-        return dio.find(searchCondition, null);
-    }
-
-    public long count(SearchCondition searchCondition, Room sample) {
-        return dio.count(searchCondition, sample);
-    }
-    public List<Room> find(SearchCondition searchCondition, Room sample) {
-        return dio.find(searchCondition, sample);
     }
 
     public Room enter(Room e) throws FailException, ProjException {
         // 旧房间
         if (e.getId() != null) return dio.findById(e);
-        e.setPersonIdList(e.getPersonIdList().stream().distinct().sorted().collect(Collectors.toList()));
+        e.setPersonIdList(e.getPersonIdList().stream().distinct().sorted().toList());
         e.setType(e.getPersonIdList().size()==2 ? RoomType.SOLO : RoomType.GROUP);
         Room indb = dio.findByKey(e);
         if (indb.notNull()) return indb;
@@ -92,7 +62,7 @@ public class RoomService {
         e.setType(RoomType.SOLO);
         dio.save(e);
         List<Person> personList = personDio.find(
-                Builder.set("idList", e.getPersonIdList().stream().map(personId->personId.toString()).collect(Collectors.toList())).to(new SearchCondition()),
+                Builder.set("idList", e.getPersonIdList().stream().map(personId->personId.toString()).toList()).to(new SearchCondition()),
                 null);
         personRoomRelateDio.save(Builder.set("person", personList.get(0)).set("room", e).set("name", personList.get(1).getName()).set("imgsrc", personList.get(1).getImgsrc()).to(new PersonRoomRelate()));
         personRoomRelateDio.save(Builder.set("person", personList.get(1)).set("room", e).set("name", personList.get(0).getName()).set("imgsrc", personList.get(0).getImgsrc()).to(new PersonRoomRelate()));
@@ -103,7 +73,7 @@ public class RoomService {
         e.setType(RoomType.GROUP);
         dio.save(e);
         List<Person> personList = personDio.find(
-                Builder.set("idList", e.getPersonIdList().stream().map(personId->personId.toString()).collect(Collectors.toList())).to(new SearchCondition()),
+                Builder.set("idList", e.getPersonIdList().stream().map(personId->personId.toString()).toList()).to(new SearchCondition()),
                 null);
         for (Person person : personList) {
             PersonRoomRelate relate = Builder.set("person", person).set("room", e).set("name", name).set("imgsrc", imgsrc).to(new PersonRoomRelate());
@@ -112,12 +82,12 @@ public class RoomService {
         return e;
     }
 
-    public void leaveRoom(Person person, Room room) {
+    public void leaveRoom(Person person, Room room) throws FailException {
         if (config.getServerHistory()) {
             historyDio.updateUnreadByRoomAndPerson(Builder.set("person", person).set("room", room).set("unread", false).to(new History()));
         } else {
             List<History> list = historyDio.find(Builder.set("limit", 0).to(new SearchCondition()), Builder.set("person", person).set("room", room).to(new History()));
-            historyDio.delete(list);
+            historyDio.deleteByIdList(list.stream().map(History::getId).toList());
         }
         PersonRoomRelate relate = personRoomRelateDio.findByKey(Builder.set("person", person).set("room", room).to(new PersonRoomRelate()));
         relate.setUnread(0);
