@@ -1,5 +1,11 @@
 package chengweiou.universe.carina.data;
 
+import java.util.Comparator;
+import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+
 import chengweiou.universe.carina.model.SearchCondition;
 import chengweiou.universe.carina.model.entity.friend.Friend;
 import chengweiou.universe.carina.model.entity.history.History;
@@ -11,12 +17,6 @@ import chengweiou.universe.carina.service.history.HistoryDio;
 import chengweiou.universe.carina.service.person.PersonDio;
 import chengweiou.universe.carina.service.room.PersonRoomRelateDio;
 import chengweiou.universe.carina.service.room.RoomDio;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
-
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class Data {
@@ -41,11 +41,11 @@ public class Data {
     public List<Friend> friendList;
 
     public void init() {
-        personList = personDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(Person::getId)).collect(Collectors.toList());
-        roomList = roomDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(Room::getId)).collect(Collectors.toList());
-        personRoomRelateList = personRoomRelateDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(PersonRoomRelate::getId)).collect(Collectors.toList());
-        historyList = historyDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(History::getId)).collect(Collectors.toList());
-        friendList = friendDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(Friend::getId)).collect(Collectors.toList());
+        personList = personDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(Person::getId)).toList();
+        roomList = roomDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(Room::getId)).toList();
+        personRoomRelateList = personRoomRelateDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(PersonRoomRelate::getId)).toList();
+        historyList = historyDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(History::getId)).toList();
+        friendList = friendDio.find(new SearchCondition(), null).stream().sorted(Comparator.comparingLong(Friend::getId)).toList();
 
     }
 
